cheatsheet/step2/backend_network_policy.yaml
---
# Cilium L7 Network Policy: Deny /deny endpoint (Azure CNS compatible)
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: backend-network-policy
  namespace: backend-ns
spec:
  endpointSelector:
    matchLabels:
      app: backend
  egress:
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: ANY
          rules:
            dns:
              - matchPattern: "microsoft.com"
              - matchPattern: "*.microsoft.com"
    - toFQDNs:
      - matchPattern: "microsoft.com"
      - matchPattern: "*.microsoft.com"
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
        "k8s:io.kubernetes.pod.namespace": frontend-ns
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/allow"
        - method: "GET"
          path: "/health"
